Issue 5 : Improving style and display on mobile devices

--- a/src/style/main.css
+++ b/src/style/main.css
@@ -27,6 +27,9 @@ p {
 
 img {
   padding-right: 1rem;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .topnav {
@@ -96,7 +99,7 @@ img {
   .topnav a.icon {
     float: right;
     display: block;
-    margin-top: -15px;
+    /* margin-top: -15px; */
   }
 } 
 
@@ -419,7 +422,7 @@ input[data-error]::after {
   color: #fff;
   position: relative;
   text-align: left;
-  min-width: 424px;
+  /* min-width: 424px; */
 }
 .hero-content::after {
   content: "";
@@ -435,12 +438,12 @@ input[data-error]::after {
   z-index: 1;
 }
 .hero-headline {
-  font-size: 6rem;
+  font-size: 4.5rem;
   font-weight: normal;
   white-space: nowrap;
 }
 .hero-text {
-  width: 146%;
+  width: 150%;
   font-weight: normal;
   margin-top: 57px;
   padding: 0;
@@ -483,6 +486,7 @@ footer {
     box-shadow: unset;
   }
   .hero-content {
+    width: 80%;
     background: #fff;
     color: #000;
     padding: 20px;
@@ -494,11 +498,12 @@ footer {
     display: none;
   }
   .hero-headline {
-    font-size: 4.5rem;
+    font-size: 3.5rem;
     white-space: normal;
   }
   .hero-text {
-    width: unset;
+    margin: 0;
+    width: 100%;
     font-size: 1.5rem;
   }
   .hero-img img {
